# CodelessML

./: .README.md.swp  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  bazel-CodelessML  bazel-bin  bazel-out  bazel-testlogs  resolved.bzl
codeless_ml/common/: BUILD  callable.proto  global_variable.py  global_variable_test.py
codeless_ml/ml/: .BUILD.swp  .embedding_model_test.py.swp  .input.py.swp  .train.py.swp  .transformer.py.swo  BUILD  configurable_model.proto  configurable_model.py  configurable_model_test.py  download_tfds.py  embedding_model_test.py  input.proto  input.py  input_test.py  model_trainer.py  model_trainer_test.py  print_tf_record_main.py  register_callable.py  register_callable_test.py  sample_mnist.py  saved_model_converter_main.py  setup_mnist.py  sysinfo.py  train.proto  train.py  transformer_model_test.py
codeless_ml/ml/artifacts/: BUILD
codeless_ml/ml/demo/: .train.sh.swp  inference.sh  mnist_cnn.pbtxt  train.sh  train_transformer.sh
codeless_ml/ml/examples/: .vit.prototext.swp  BUILD  machine_translation.prototext  vae.prototext  vit.prototext
codeless_ml/ml/registry/: .mnist.py.swp  .motion_prediction.py.swp  BUILD  mnist.py  mnist_test.py  mtnt.py  mtnt_test.py  vae.py  vae_test.py  vit.py  vit_test.py  vq_vae.py
codeless_ml/ml/testdata/: BUILD
codeless_ml/ml/transformer/: .BUILD.swp  BUILD  attention.py  attention_test.py  auto_regressive_inference.py  cache_attention.py  cache_attention_test.py  decoder.py  decoder_test.py  encoder.py  ff.py  (+14 more)
codeless_ml/pip/: BUILD  requirements.in  requirements.txt
(+18 files in other folders)
