module(
    name = "com_github_codeless_ml",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "protobuf", version = "23.1", repo_name="com_google_protobuf")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_python", version = "0.27.1")
bazel_dep(name = "abseil-py", version = "1.4.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.27.1")

# The following stanza defines the dependency for gazelle
# See here https://github.com/bazelbuild/bazel-gazelle/releases/ for the
# latest version.
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//codeless_ml/pip:requirements.txt",
)

use_repo(pip, "pip")

